# my-automated-traffic

./: .gitignore  README.md  pyproject.toml  todo.md
bak/: cli.py
docs/: AGENTS.md  ARCHITECTURE.md  DATABASE.md  KEYWORD_RESEARCH_DESIGN.md
docs/superpowers/plans/: 2026-06-21-agentic-affiliate-traffic.md  2026-06-21-ai-video-generation.md  2026-06-21-interactive-cli-wizard.md  2026-06-21-packaging-and-cli-installation.md
docs/superpowers/specs/: 2026-06-21-agentic-affiliate-traffic-design.md  2026-06-21-ai-video-generation-design.md  2026-06-21-interactive-cli-wizard-design.md  2026-06-21-packaging-and-cli-installation-design.md  2026-06-25-automation-pipeline-design.md
src/: database.py  social_agent.py  video_agent.py
src/my_automated_traffic/: __init__.py  blog_agent.py  bridge_page.py  cli.py  keyword_agent.py  llm_client.py  main.py  orchestrator.py  video_agent.py
tests/: test_blog_agent.py  test_bridge_page.py  test_cli.py  test_database.py  test_keyword_agent.py  test_social_agent.py  test_video_agent.py
