[project]
name = "my-automated-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nik Nichols", email = "nik@vizionikmedia.com" }
]
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.1.8",
    "edge-tts>=7.2.8",
    "gtts==2.5.4",
    "idna==3.18",
    "iniconfig==2.3.0",
    "moviepy>=2.2.1",
    "packaging==26.2",
    "pillow>=11.3.0",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.1.1",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "pytrends>=4.8.0",
    "requests==2.34.2",
    "urllib3==2.7.0",
]

[project.scripts]
my-automated-traffic = "my_automated_traffic:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
